tests/models/enum/unnamed/bool/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(alias = "val")]
        bool
    ),
}
fn main() {}
