tests/models/enum/unnamed/bool/fail/alias.stderr
error: No support alias term on the unnamed field.
 --> tests/models/enum/unnamed/bool/fail/alias.rs:4:10
  |
4 |       Value(
  |  __________^
5 | |        #[field(alias = "val")]
6 | |         bool
7 | |     ),
  | |_____^
